# interpretable-context-methodology-template

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: dashboard-direction.md  dashboard-prototype.md  dashboard-readiness.md  demo.md  e2e-playtest.md  first-10-minutes.md  first-workspace.md  glossary.md  handoff-acceptance.md  index.html  install.md  json-output.md  product-direction.md  pypi-readiness.md  pypi-upgrade.md  release-process.md  release-ready-workspace.md  research-summary.md  review-rubrics.md  revision-audit.md  source-traceability.md  template-design.md  workflow-rubrics.md
docs/assets/: site.css
examples/completed-content-plan/: AGENTS.md  CONTEXT.md  README.md
examples/completed-content-plan/.github/prompts/: review-icm-output.prompt.md
examples/completed-content-plan/_config/: project-profile.md
examples/completed-content-plan/_templates/: project-readme.md
examples/completed-content-plan/shared/: backlog.md  decision-log.md  glossary.md
examples/completed-content-plan/stages/04_questionnaire/: CONTEXT.md
examples/completed-documentation-refresh/: AGENTS.md  CONTEXT.md  README.md
examples/completed-documentation-refresh/_config/: project-profile.md
examples/completed-documentation-refresh/shared/: decision-log.md
examples/completed-documentation-refresh/stages/05_validation/: CONTEXT.md
examples/completed-documentation-refresh/tools/: validate_icm_workspace.py
examples/completed-project-plan/: AGENTS.md  CONTEXT.md  README.md
examples/completed-project-plan/_config/: operating-rules.md  project-profile.md  quality-gates.md
examples/completed-project-plan/shared/: README.md  decision-log.md
examples/completed-project-plan/stages/01_discovery/: CONTEXT.md
examples/completed-project-plan/stages/05_validation/: CONTEXT.md
examples/completed-research-brief/: AGENTS.md  CONTEXT.md  README.md
examples/completed-research-brief/_config/: glossary.md  project-profile.md  style-guide.md
examples/completed-research-brief/_templates/: run-brief.md
examples/completed-research-brief/shared/: backlog.md
examples/completed-research-brief/stages/02_stage_mapping/: CONTEXT.md
icm/: __init__.py  __main__.py  cli.py  dashboard.py  workspace.py
icm/templates/icm-workspace/: .gitignore  AGENTS.md  CONTEXT.md  README.md
icm/templates/icm-workspace/_config/: project-profile.md
icm/templates/icm-workspace/_templates/: decision-log-entry.md  review-note.md  stage-context.md
icm/templates/icm-workspace/shared/: acceptance-log.md  glossary.md
templates/icm-workspace/: .gitignore  AGENTS.md  CONTEXT.md  README.md
templates/icm-workspace/.github/prompts/: design-icm-workspace.prompt.md  review-icm-output.prompt.md  run-icm-stage.prompt.md
templates/icm-workspace/_config/: glossary.md  operating-rules.md  project-profile.md  quality-gates.md  style-guide.md
templates/icm-workspace/_templates/: decision-log-entry.md  project-readme.md  review-note.md  run-brief.md  stage-context.md
templates/icm-workspace/shared/: README.md  backlog.md  decision-log.md  glossary.md
templates/icm-workspace/stages/00_intake/: CONTEXT.md
templates/icm-workspace/stages/01_discovery/: CONTEXT.md
templates/icm-workspace/stages/03_scaffold/: CONTEXT.md
tests/: test_cli.py  test_dashboard.py  test_docs.py  test_workspace.py
tools/: check_docs_site.py  check_packaged_assets.py  check_release_readiness.py  new_icm_workspace.py  validate_icm_workspace.py
(+61 files in other folders)
