[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "icm-workspace-template"
version = "0.5.0"
description = "CLI and reusable template for Interpretable Context Methodology workspaces"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Hobo" }
]
keywords = [
  "interpretable-context-methodology",
  "icm",
  "ai-agents",
  "context-engineering",
  "agent-workflows"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Text Processing :: Markup :: Markdown"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/stickwithfiddle-sys/interpretable-context-methodology-template"
Paper = "https://arxiv.org/html/2603.16021v2"
Repository = "https://github.com/stickwithfiddle-sys/interpretable-context-methodology-template"

[project.scripts]
icm = "icm.cli:main"

[tool.setuptools.packages.find]
include = ["icm*"]

[tool.setuptools.package-data]
icm = [
  "templates/icm-workspace/**/*",
  "templates/icm-workspace/.gitignore",
  "templates/icm-workspace/.github/prompts/*.md",
  "templates/icm-workspace/stages/*/output/.gitkeep",
  "legacy_tools/*.py"
]
