[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "icm-workspace-template"
version = "0.15.0"
description = "CLI and reusable template for Interpretable Context Methodology workspaces"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE", "NOTICE"]
authors = [
  { name = "Hobo" }
]
keywords = [
  "interpretable-context-methodology",
  "icm",
  "ai-agents",
  "context-engineering",
  "agent-workflows"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Text Processing :: Markup :: Markdown"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1",
  "pytest>=8",
  "tomli>=2; python_version<'3.11'",
  "twine>=5"
]

[project.urls]
Changelog = "https://github.com/stickwithfiddle-sys/interpretable-context-methodology-template/blob/main/CHANGELOG.md"
Documentation = "https://stickwithfiddle-sys.github.io/interpretable-context-methodology-template/"
Homepage = "https://github.com/stickwithfiddle-sys/interpretable-context-methodology-template"
Issues = "https://github.com/stickwithfiddle-sys/interpretable-context-methodology-template/issues"
Paper = "https://arxiv.org/html/2603.16021v2"
Repository = "https://github.com/stickwithfiddle-sys/interpretable-context-methodology-template"

[project.scripts]
icm = "icm.cli:main"

[tool.setuptools.packages.find]
include = ["icm*"]

[tool.setuptools.package-data]
icm = [
  "templates/icm-workspace/**/*",
  "templates/icm-workspace/.gitignore",
  "templates/icm-workspace/.github/prompts/*.md",
  "templates/icm-workspace/stages/*/output/.gitkeep",
  "legacy_tools/*.py"
]

[tool.pytest.ini_options]
addopts = "--capture=no"
testpaths = ["tests"]
